# ai-engineering

./: .gitignore
.claude/: settings.json
graphify-out/: cost.json  (+5 more)
llm-engineering/rag/: augment.py  docs.md  pyproject.toml  rag.py  requirements-pgvector.txt  requirements.txt  retriever.py  sample_documents.py  simple_main.py
llm-engineering/rag/graphify-out/cache/: stat-index.json
llm-engineering/rag/scripts/: chroma_run.py  compare_embeddings.py  demo_runner.py  evaluate_faithfulness_run.py  evaluate_recall.py  qdrant_run.py  run_tests.py  sentence_transformer_run.py  simple_bm25_run.py  simple_hybrid_run.py  simple_main.py
llm-engineering/rag/src/rag/: __init__.py  api.py  config.py  mcp_server.py  retrieval.py
llm-engineering/rag/src/rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
llm-engineering/rag/src/rag/databases/: __init__.py  base.py  chromadb.py  postgres.py  qdrant.py
llm-engineering/rag/src/rag/embeddings/: __init__.py  bm25.py  bow.py  sentence_transformers.py  tfidf.py
llm-engineering/rag/src/rag/generators/: __init__.py  claude.py  simple.py
llm-engineering/rag/src/rag/pipeline/: __init__.py  base.py  chromadb.py  conversational.py  factory.py  hybrid.py  postgres.py  qdrant.py  vectordb.py
llm-engineering/rag/src/rag/reranker/: __init__.py  base.py  cohere.py
llm-engineering/rag/tests/: test_chunker.py  test_conversational.py  test_embedders.py  test_evaluation.py  test_hyde.py  test_parent_child.py  test_pipelines.py  test_postgres.py  test_prompt_builders.py  test_rerankers.py  test_retrieval_primitives.py
(+68 files in other folders)
